ext/hls/m3u8.h
@@ -76,6 +76,7 @@ struct _GstM3U8Client
   GstM3U8 *current;
   guint update_failed_count;
   gint sequence;                /* the next sequence for this client */
+  GstClockTime sequence_position; /* position of this sequence */
   GMutex lock;
 };
 
@@ -88,8 +89,6 @@ gboolean gst_m3u8_client_get_next_fragment (GstM3U8Client * client,
     gboolean * discontinuity, const gchar ** uri, GstClockTime * duration,
     GstClockTime * timestamp, const gchar ** key, const guint8 ** iv);
 void gst_m3u8_client_advance_fragment (GstM3U8Client * client);
-void gst_m3u8_client_get_current_position (GstM3U8Client * client,
-    GstClockTime * timestamp);
 GstClockTime gst_m3u8_client_get_duration (GstM3U8Client * client);
 GstClockTime gst_m3u8_client_get_target_duration (GstM3U8Client * client);
 const gchar *gst_m3u8_client_get_uri(GstM3U8Client * client);
